examples/test/testpolicy16502.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16502
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key39: value17
      key38: value4
      key21: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value28
          key34: value22
      podSelector:
        matchLabels:
          key6: value40
          key5: value4
          key31: value39
